--- a/card/css/styles.css
+++ b/card/css/styles.css
@@ -4,90 +4,108 @@
     box-sizing: border-box;
 }
 body{
+    font-family: "Red Hat Display", sans-serif;
+    max-width: 1440px;
+    margin: 0 auto;
     background-image: url(../img/pattern-background-desktop.svg);
     background-repeat: no-repeat;
-    font-family: 'Red Hat Display', sans-serif;
-    
+    background-color: hsl(225, 100%, 94%);
+    background-position: top;
+    background-size: contain;
 }
 #content_container{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    max-height: 600px;
-    max-width: 1440px;
-    border-radius: 10px;
-    background-color: white;
-
-    
+    background-color: #ffffff;
+    border-radius: 2rem;
+    margin: 2rem auto;
+    max-width: 45rem;
+    /*box-shadow: 0 3.2rem 6.4rem rgba(0, 75, 76, 0.2)*/
 }
-#content_container .main_img{
-    margin-top: 30px;
-    margin-bottom: 25px;
+.img_container .main_img{
+    border-top-left-radius: 2rem;
+    border-top-right-radius: 2rem;
+    width: 100%;
 }
 #txt_container{
-    text-align: center;
+    background-color: #ffffff;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 1.8rem 4rem;
 }
-.section__A{
+#txt_container h1{
     text-align: center;
-}
-.section__A h1{
     font-size: 36px;
-    font-weight: bolder;
     color: hsl(223, 47%, 23%);
+    margin-bottom: 10px;
 }
-.section__A p{
-    padding-top: 20px;
-    padding-left: 450px;
-    padding-right: 450px;
-    font-size: 24px;
-    line-height: 1.3;
-    margin-bottom: 30px;
+#txt_container .order_note{
+    text-align: center;
+    font-size: 16px;
+    color: hsl(224, 23%, 55%);
+    margin-bottom: 20px;
+    padding: 0 120px;
+    
+}
+#plan_box{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    background-color: hsl(225, 100%, 98%);
+    border-radius: 15px;
+    width: 350px;
+    padding: 20px 0;
+    margin-bottom: 25px;
+}
+#plan_box img{
+    padding-left: 30px;
+}
+#plan_box .plan_txt{
+    margin-right: 35px;
+}
+#plan_box a{
+    margin-right: 25px;
+    font-weight: bolder;
+}
+#plan_box a:hover{
+    text-decoration: none;
+    font-weight: normal;
+}
+#plan_box p{
     color: hsl(224, 23%, 55%);
 }
-.section_B{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 90px;
-    width: 25%;
-    background-color: hsl(225, 100%, 98%);
-    border-radius: 10px;
-    margin: auto;
-}
-.section_B a{
-    padding-left: 90px;
+#plan_box h2{
+    font-size: 16px;
     font-weight: bold;
-}
-.play_plan{
-    display: flex;
-    justify-content: left;
-    align-items: center;
-    padding-left: 10px;
-}
-.section_B img{
-    margin-right: 15px;
-}
-.section_B .play_plan .plan{
-    font-size: 12px;
-    font-weight: bold;
-    line-height: 2;
     color: hsl(223, 47%, 23%);
 }
-.section_B .play_plan .plan_txt{
-    padding-right: 5px;
-    font-size: 15px;
+#payment-box{
+    display: flex;
+    flex-direction: column;
+    row-gap: 20px;
 }
-.section_C button{
-    margin-top: 15px;
-    padding: 10px 100px;
-    border-radius: 5px;
+#payment-box .btn-payment{
     background-color: hsl(245, 75%, 52%);
-    border-style: unset;
-    color: white;
-}
-.section_C p{
-    margin-top: 20px;
+    text-align: center;
+    padding: 10px 50px;
+    width: 350px;
+    border-radius: 5px;
+    margin-bottom: 20px;
+    color: #ffffff;
     font-weight: 700;
-    color: hsl(224, 23%, 55%)
+    text-decoration: none;
+    box-shadow: 0 25px 20px #f0ebeb;
+}
+#payment-box .btn-payment:hover{
+    background-color: hsl(224, 97%, 54%);
+}
+#cancel a{
+    text-align: center;
+    color: hsl(224, 23%, 55%);
+    text-decoration: none;
+}
+#cancel a:hover{
+    font-size: 16px;
+    font-weight: bold;
+    text-decoration: none;
+    color: hsl(223, 47%, 23%);
 }
