--- a/start_preview_card/css/mobile.css
+++ b/start_preview_card/css/mobile.css
@@ -1,18 +1,17 @@
-body{
-    line-height: 1.6;
-    width: 375px;
-    font-family: 'Lexend Deca', sans-serif;
-    background-color: hsl(233, 47%, 7%);
-    overflow-y: hidden;
-}
 
+body{
+    overflow: hidden;
+
+}
 #box{
     display: flex;
     flex-direction: column-reverse;
-    justify-content: center;
     align-items: center;
-    width: 350px;
+    width: 600px;
     border-radius: 5px;
+    margin-left: -60px;
+    margin-bottom: 50px;
+    margin-top: 50px;
 }
 
 #content{
@@ -20,42 +19,38 @@ body{
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    width: 80%;
     height: auto;
+    width: 40%;
+    padding-left: 0;
+    min-height: auto;
+    text-align: center;
+    background-color: hsl(244, 38%, 16%);
+
 }
 
 #box .pic{
     background: linear-gradient(0deg, hsla(277, 64%, 61%, 0.3), hsla(277, 64%, 61%, 0.7)), url(../img/image-header-mobile.jpg) no-repeat;
     background-size: contain;
-    height: 233px;
-    width: 90%;
-    padding: 0;
+    height: 175.8px;
+    width: 40%;
+    padding: 0px 0;
     border-top-left-radius: 5px;
     border-top-right-radius: 5px;
+    border-bottom-right-radius: 0;
 }
 
-#box #content{
-    
-    width: 90%;
-    min-height: auto;
-    text-align: center;
-    background-color: hsl(244, 38%, 16%);
-}
 #content .main_h{
-    padding-right: 60px;
-    padding-top: 20px;
+    padding: 20px 50px 0 40px;
     font-size: 16px;
     margin-bottom: 10px;
     text-align: center;
-    line-height: 1.2;
+    line-height: 1.3;
 }
 #content .main_p{
     font-size: 10px;
     color: hsla(0, 0%, 100%, 0.75);
     margin: 0;
-    padding-top: 0;
-    padding-bottom: 20px;
-    padding-right: 50px;
+    padding: 0 50px 20px 40px;
     text-align: center;
 }
 
@@ -64,7 +59,8 @@ body{
     flex-direction: column;
     justify-content: center; 
     text-align: center;
-    padding-right: 60px;
+    padding-right: 10px;
+    line-height: 1.6;
     row-gap: 20px;
     font-size: 8px;
     margin-bottom: 20px;
