--- a/start_preview_card/css/styles.css
+++ b/start_preview_card/css/styles.css
@@ -9,15 +9,7 @@
 body{
     font-family: 'Lexend Deca', sans-serif;
     background-color: hsl(233, 47%, 7%);
-    width: 1440px;
     line-height: 1.3;
-    
-}
-#content{
-    display: flex;
-    flex-direction: column;
-    justify-content: left;
-    padding-left: 80px;
     
 }
 
@@ -31,6 +23,20 @@ body{
     
 }
 
+#content{
+    display: flex;
+    flex-direction: column;
+    justify-content: left;
+    padding-left: 80px;
+    border-radius: 5px;
+    width: 50%;
+    min-height: 100%;
+    background-color: hsl(244, 38%, 16%);
+    overflow-x: hidden;
+    
+}
+
+
 #box .pic{
     border-bottom-right-radius: 5px;
     border-top-right-radius: 5px;
@@ -40,14 +46,6 @@ body{
     background: linear-gradient(0deg, hsla(277, 64%, 61%, 0.3), hsla(277, 64%, 61%, 0.7)), url(../img/image-header-desktop.jpg) no-repeat;
   }
 
-
-#box #content{
-    border-radius: 5px;
-    width: 50%;
-    min-height: 100%;
-    background-color: hsl(244, 38%, 16%);
-    overflow: hidden;
-}
 
 #content .main_h{
     color: hsl(0, 0%, 100%); 
